# PE-H.A.M.

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CharacteristicsDialog.h  PEHeaderModifier.h  PEHeaderReader.h  mainwindow.h  old_code.txt
src/: CharacteristicsDialog.cpp  PEHeaderModifier.cpp  PEHeaderReader.cpp  mainwindow.cpp
ui/: dialog.ui  mainwindow.ui
